--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.5",
